[tool.poetry]
name = "price-curve-analysis"
version = "0.1.0"
description = ""
authors = ["Jason Atallah <jasonatallah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
